	  changes made to pl2303, but untested (2013-9-5).
	* arch/arm/src/sama5/sam_udphs.c:  The high-speed device side driver
	  is now functional (although more testing is always needed) (2013-9-5).
	* net/net_monitor.c: Fixes a race condition where a loss of connection
	  may not be detected when the connection is lost before it has been
	  accepted (from Max Holtzberg) (2013-9-6).
	* configs/sama5d3x-ek/demo:  Add a new NSH configuration.  The
	  original NSH configuration will be a simple platform for testing
	  individual features; the demo configuration will be a more complex
	  platform for demonstrating multiple interacting features (2013-9-6).
	* net/uip/uip_tcpbacklog.c:  Fix a major bug in the TCP/IP backlog
	  initialization:  Only the first backlog buffer was getting added
	  to the free list.  From Max Holtzberg (2013-9-6).
	* configs/sama5d3x-ek/demo:  Add support for USB MSC device on the
	  AT25 serial FLASH (untested) (2013-9-6).
	* drivers/net/enc28j60.c:  Changes back-ported from the ENCX24J600
	  to the ENC28J60 by Max Holtzberg.  These seem like reasonable and
	  correct changes, but have yet to be verified on an ENC28J60 (2013-9-6).
	* drivers/usbdev/usbdev_strings.c:  Extended decoding and stringifging
	  of USB trace output to include trace output from class drivers.
	  (2013-9-6).
	* drivers/usbdev/usbmsc_desc.c:  Fix a warning when USB MSC is
	  compiled for a high-speed device (2013-9-7).
	* drivers/usbhost/usbhost_storage.c:  If device is returning fatal
	  transfer errors while attempt to initialize, don't bother with
	  the startup retries; abort immediately so that the device will
	  be reset and we can try again (2013-9-9).
	* drivers/usbhost/usbhost_storagge:  Correct a reference counting
	  error:  When an MSC device transfer fails while waiting for
	  UnitTestReady (see 2013-9-9), the reference count was not being
	  decremented.  The end result is a memory leak (2013-9-10).
